--- a/style/base/_variables.scss
+++ b/style/base/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #36d1dc;
-$secondary-color: #5b86e5;
+$primary-color: #232526;
+$secondary-color: #414345;
 $font-family: "Montserrat", sans-serif;
 
 $light-white: #e5e5e5;
